# test_dep_cmake

./: CMakeLists.txt
include/: random_lib.h
src/: random_lib.cpp
